04-built-in-resource-types/Ingress/pods-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
kind: Pod
apiVersion: v1
metadata:
  labels:
    app: foo
    tier: workloads
  name: foo
  namespace: ingress
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --http=true
    - --port=8080
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: foo
---
kind: Service
apiVersion: v1
metadata:
  name: foo
  namespace: ingress
spec:
  selector:
    app: foo
  ports:
  # Default port used by the image
  - port: 8080
---
kind: Pod
apiVersion: v1
metadata:
  labels:
    app: bar
    tier: workloads
  name: bar
  namespace: ingress
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --http=true
    - --port=8080
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: bar
---
kind: Service
apiVersion: v1
metadata:
  name: bar
  namespace: ingress
spec:
  selector:
    app: bar
  ports:
  # Default port used by the image
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddkc-ingress
  namespace: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /foo
        backend:
          service:
            name: foo
            port:
              number: 8080
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: bar
            port:
              number: 8080
---
